--- a/armonitor-web/src/main/webapp/WEB-INF/web.xml
+++ b/armonitor-web/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,24 @@
 		</user-data-constraint>		
 	</security-constraint>
 	<security-constraint>
+		<display-name>Deployer</display-name>
+		<web-resource-collection>
+			<web-resource-name>Restricted Access - Deployer RS</web-resource-name>
+			<url-pattern>/rs/deploy</url-pattern>		
+		</web-resource-collection>
+		<web-resource-collection>
+			<web-resource-name>Restricted Access - Deployer HTML</web-resource-name>
+			<url-pattern>/partials/deploy/*</url-pattern>
+			<http-method>GET</http-method>
+		</web-resource-collection>		
+		<auth-constraint>
+			<role-name>deployer</role-name>
+		</auth-constraint>
+		<user-data-constraint>
+			<transport-guarantee>NONE</transport-guarantee>
+		</user-data-constraint>		
+	</security-constraint>
+	<security-constraint>
 		<display-name>Profile</display-name>
 		<web-resource-collection>
 			<web-resource-name>Restricted Access - Profile HTML</web-resource-name>
@@ -46,5 +64,8 @@
 	</security-role>
 	<security-role>
 		<role-name>admin</role-name>
-	</security-role>		
+	</security-role>
+	<security-role>
+		<role-name>deployer</role-name>
+	</security-role>			
 </web-app>
